--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    
     "@googlemaps/markerclusterer": "^2.5.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
@@ -20,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "googleapis": "^144.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "^18.3.1",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
